--- a/templates/backup/services.html
+++ b/templates/backup/services.html
@@ -1,5 +1,5 @@
 {% extends 'cat_main.html' %}
-{% block title %}About{% endblock  %}
+{% block title %}Services{% endblock  %}
 {% block body %}
 {% load static %}
 
