--- a/templates/subcategories.html
+++ b/templates/subcategories.html
@@ -197,19 +197,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 						<li>Real Estate</li>
 					</ul>
-						<a class="w3ls-ads" href="{% url 'all_classifieds_cat' %}">View all Ads</a>
+						<a class="w3ls-ads" href="{% url 'all_classifieds_cat' %}">View all Business</a>
 					</div>
 					<div class="resp-tabs-container hor_1">
-						<span class="active total" style="display:block;" data-toggle="modal" data-target="#myModal"><strong>All USA</strong> (Select your city to see local ads)</span>
+						<span class="active total" style="display:block;" data-toggle="modal" data-target="#myModal"><strong>Select Your Category</strong></span>
 						<div>
 							<div class="category">
 								<div class="category-img">
 									<img src="{% static "category/images/cat1.png"%}" title="image" alt="" />
 								</div>
 								<div class="category-info">
-									<h4></h4>
-									<span>5,12,850 Ads</span>
-									<a href=" {% url 'all_classifieds_cat' %} ">View all Ads</a>
+									<h4>Technology</h4>
+									<span>512 Business</span>
+									<a href=" {% url 'all_classifieds_cat' %} ">View all Business</a>
 								</div>
 								<div class="clearfix"></div>
 							</div>
@@ -230,8 +230,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 								<div class="category-info">
 									<h4>Electronics & Appliances</h4>
-									<span>2,01,850 Ads</span>
-									<a href="all-classifieds.html">View all Ads</a>
+									<span>352 Business</span>
+									<a href=" {% url 'all_classifieds_cat' %} ">View all Business</a>
 								</div>
 								<div class="clearfix"></div>
 							</div>
@@ -253,8 +253,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 								<div class="category-info">
 									<h4>Vehical</h4>
-									<span>1,98,080 Ads</span>
-									<a href="all-classifieds.html">View all Ads</a>
+									<span>712 Business</span>
+									<a href=" {% url 'all_classifieds_cat' %} ">View all Business</a>
 								</div>
 								<div class="clearfix"></div>
 							</div>
@@ -273,8 +273,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 								<div class="category-info">
 									<h4>Retail</h4>
-									<span>6,17,568 Ads</span>
-									<a href="all-classifieds.html">View all Ads</a>
+									<span>112 Business</span>
+									<a href=" {% url 'all_classifieds_cat' %} ">View all Business</a>
 								</div>
 								<div class="clearfix"></div>
 							</div>
@@ -294,8 +294,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 								<div class="category-info">
 									<h4>Furniture</h4>
-									<span>1,05,168 Ads</span>
-									<a href="all-classifieds.html">View all Ads</a>
+									<span>252 Business</span>
+									<a href=" {% url 'all_classifieds_cat' %} ">View all Business</a>
 								</div>
 								<div class="clearfix"></div>
 							</div>
@@ -315,8 +315,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 								<div class="category-info">
 									<h4>Pets</h4>
-									<span>1,77,816 Ads</span>
-									<a href="all-classifieds.html">View all Ads</a>
+									<span>612 Business</span>
+									<a href=" {% url 'all_classifieds_cat' %} ">View all Business</a>
 								</div>
 								<div class="clearfix"></div>
 							</div>
@@ -336,8 +336,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 								<div class="category-info">
 									<h4>Books, Sports & Hobbies</h4>
-									<span>9,58,458 Ads</span>
-									<a href="all-classifieds.html">View all Ads</a>
+											<span>90 Business</span>
+									<a href=" {% url 'all_classifieds_cat' %} ">View all Business</a>
 								</div>
 								<div class="clearfix"></div>
 							</div>
@@ -358,8 +358,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 								<div class="category-info">
 									<h4>Cloth</h4>
-									<span>3,52,345 Ads</span>
-									<a href="all-classifieds.html">View all Ads</a>
+									<span>72 Business</span>
+									<a href=" {% url 'all_classifieds_cat' %} ">View all Business</a>
 								</div>
 								<div class="clearfix"></div>
 							</div>
@@ -378,8 +378,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 								<div class="category-info">
 									<h4>Kids</h4>
-									<span>8,45,298 Ads</span>
-									<a href="all-classifieds.html">View all Ads</a>
+									<span>101 Business</span>
+									<a href=" {% url 'all_classifieds_cat' %} ">View all Business</a>
 								</div>
 								<div class="clearfix"></div>
 							</div>
@@ -397,9 +397,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<img src="{% static "category/images/cat10.png"%}" title="image" alt="" />
 								</div>
 								<div class="category-info">
-									<h4>Services</h4>
-									<span>7,58,867 Ads</span>
-									<a href="all-classifieds.html">View all Ads</a>
+									<h4>Real Estate</h4>
+									<span>52 Business</span>
+									<a href=" {% url 'all_classifieds_cat' %} ">View all Business</a>
+
 								</div>
 								<div class="clearfix"></div>
 							</div>
@@ -424,8 +425,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 								<div class="category-info">
 									<h4>Jobs</h4>
-									<span>5,74,547 Ads</span>
-									<a href="all-classifieds.html">View all Ads</a>
+									<span>51 Business</span>
+									<a href=" {% url 'all_classifieds_cat' %} ">View all Business</a>
 								</div>
 								<div class="clearfix"></div>
 							</div>
@@ -454,10 +455,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<img src="{% static "category/images/cat12.png"%}" title="image" alt="" />
 								</div>
 								<div class="category-info">
-									<h4>Real Estate</h4>
-									<span>98,156 Ads</span>
-									<a href="all-classifieds.html">View all Ads</a>
-								</div>
+								<h4>Real Estate</h4>
+								<span>124 Business</span>
+									<a href=" {% url 'all_classifieds_cat' %} ">View all Business</a></div>
 								<div class="clearfix"></div>
 							</div>
 							<div class="sub-categories">
