update login username reomved

--- a/templates/Final_log.html
+++ b/templates/Final_log.html
@@ -19,13 +19,13 @@
             {% csrf_token %}
             <img src="{% static "/REG_LOG_FORGOT/images/LOGO2.JPG"%}" alt=""><br><br>
 
-            <div>
+            <!-- <div>  not need of username in login so removed by (HR) -->
                 <!-- <label>User Name</label><br> -->
-                <span class="fa fa-user"></span>
+                <!-- <span class="fa fa-user"></span>
                 <input type="text" name="username" id="name" placeholder="User Name" required=""/><br><br>
                 {{ form.username }}
-            </div>
-            <div>
+            </div> -->
+            <!-- <div> -->
                 <!-- <label>Email</label><br> -->
                 <span class="fa fa-envelope"></span>
                 <input type="email" name="email" id="name" placeholder="example@gmail.com" required=""/><br><br>
