models folder needa to be in app folder

--- a/templates/Final_log.html
+++ b/templates/Final_log.html
@@ -25,7 +25,7 @@
                 <input type="text" name="username" id="name" placeholder="User Name" required=""/><br><br>
                 {{ form.username }}
             </div> -->
-            <!-- <div> -->
+            <div>
                 <!-- <label>Email</label><br> -->
                 <span class="fa fa-envelope"></span>
                 <input type="email" name="email" id="name" placeholder="example@gmail.com" required=""/><br><br>
